--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,10 +1,30 @@
-<!doctype html>
-<title>Hello from Flask</title>
-{% if username %}
-  <h1>Hello {{ username }}!</h1>
-{% else %}
-	<form action="login" method="POST">
-		<font face="verdana"><b>Username</b><font/><input type="text" name="username"><br/>
-		<font face="verdana"><b>Password</b><font/><input type="password" name="password"><br/>
-		<input type=submit value="Go"></form>
-{% endif %}
+<!-- extend base layout -->
+{% extends "base.html" %}
+
+{% block content %}
+<h1>Hi, wowowo!</h1>
+<form action="" method="post" name="post">
+    {{form.hidden_tag()}}
+    <table>
+        <tr>
+            <td>Say something:</td>
+            <td>{{ form.post(size = 30, maxlength = 140) }}</td>
+            <td>
+            {% for error in form.errors.post %}
+            <span style="color: red;">[{{error}}]</span><br>
+            {% endfor %}
+            </td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><input type="submit" value="Post!"></td>
+            <td></td>
+        </tr>
+    </table>
+</form>
+{% for post in posts %}
+<p>
+  {{post.author.nickname}} says: <b>{{post.body}}</b>
+</p>
+{% endfor %}
+{% endblock %}
