--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,11 +3,16 @@
 
 {% block content %}
 <h1>Hi, {{user.username}}!</h1>
+<form action="" method="post" name="approve">
 {% for i in mkcoin.items %}
 <p>
   {{i.user.username}} makes: <b>{{i.coins}}</b> at {{i.mktime}}
+  <input type="checkbox" name="tn" value="{{ i }}" />
 </p>
 {% endfor %}
+
 {% if mkcoin.has_prev %}<a href="{{ url_for('hello', page = mkcoin.prev_num) }}"><< Newer items</a>{% else %}<< Newer items{% endif %} | 
 {% if mkcoin.has_next %}<a href="{{ url_for('hello', page = mkcoin.next_num) }}">Older items >></a>{% else %}Older items >>{% endif %}
+<p><input type="submit" value="Sign In"></p>
+</form>
 {% endblock %}
