vertically split window

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
     {% endif %}
   </head>
   <body>
-    <div>Shengqianbao Admin:
+    <div><b>Shengqianbao Admin:</b>
         <a href="{{ url_for('hello') }}">Home</a>
         <a href="{{ url_for('logout') }}">Log Out</a>
     </div>
