--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div><b>Shengqianbao Admin:</b>
-        <a href="{{ url_for('hello') }}">Home</a>
+        <a href="{{ url_for('hello', type = 'approve') }}">Home</a>
         <a href="{{ url_for('logout') }}">Log Out</a>
     </div>
     <hr>
