--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,28 +1,24 @@
 <!-- extend base layout -->
-{% extends "base.html" %}
+{% extends "logined.html" %}
 
-{% block content %}
-	<table border="0" width = "600" cellspacing=”0″ cellpadding=”0″ >
-	  <tr>
-	    <td>
-	    	<h1>Hi, {{user.username}}!</h1>
-	    </td>
-	    <td colspan="6">
-		    <form action="" method="post" name="approve">
-			{% for i in mkcoin.items %}
-			<p>
-			  {{i.user.username}} makes: <b>{{i.coins}}</b> at {{i.mktime}}
-			  <input type="checkbox" name="tn" value="{{i.key_id}}" />
-			</p>
-			{% endfor %}
+{% block workspace %}
+	<li><h2>
+	{% if type=='approve' %}
+		待审核的请求
+	{% elif type=='charge' %}
+		待充值的请求
+	{% elif type=='declined' %}
+		已驳回的请求
+	{% else %}
+		已充值的请求
+	{% endif %}
+	</h2></li>
+	{% for i in mkcoin.items %}
+	  <p><a href="{{ url_for('detail', type = type, id = i.key_id, page = mkcoin.page ) }} ">{{i.user.username}} makes: <b>{{i.coins}}</b> at {{i.mktime}}</a></p>
+	{% endfor %}
 
-			{% if mkcoin.has_prev %}<a href="{{ url_for('hello', page = mkcoin.prev_num) }}"><< Newer items</a>{% else %}<< Newer items{% endif %} | 
-			{% if mkcoin.has_next %}<a href="{{ url_for('hello', page = mkcoin.next_num) }}">Older items >></a>{% else %}Older items >>{% endif %}
-			<p><input type="submit" value="Sign In"></p>
-			</form>	 
-	    </td>
-	  </tr>
-	</table>
+	{% if mkcoin.has_prev %}<a href="{{ url_for('hello', page = mkcoin.prev_num, type = type) }}"><< Newer items</a>{% else %}<< Newer items{% endif %} | 
+	{% if mkcoin.has_next %}<a href="{{ url_for('hello', page = mkcoin.next_num, type = type) }}">Older items >></a>{% else %}Older items >>{% endif %}
 {% endblock %}
 
 
