--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,13 +2,15 @@
 {% extends "logined.html" %}
 
 {% block workspace %}
-	<h2>{% if type=='approve' %}待审核的请求{% elif type=='charge' %}待充值的请求{% elif type=='declined' %}已驳回的请求{% else %}已充值的请求{% endif %}</h2>
-	{% for i in mkcoin.items %}
-	  <p><a href="{{ url_for('detail', type = type, id = i.key_id, page = mkcoin.page ) }} ">{{i.user.username}} makes: <b>{{i.coins}}</b> at {{i.mktime}}</a></p>
-	{% endfor %}
+	{% if type != 'blank' %}
+		<h2>{% if type=='approve' %}待审核的请求{% elif type=='charge' %}待充值的请求{% elif type=='declined' %}已驳回的请求{% else %}已充值的请求{% endif %}</h2>
+		{% for i in mkcoin.items %}
+		  <p><a href="{{ url_for('detail', type = type, id = i.key_id, page = mkcoin.page ) }} ">{{i.user.username}} makes: <b>{{i.coins}}</b> at {{i.mktime}}</a></p>
+		{% endfor %}
 
-	{% if mkcoin.has_prev %}<a href="{{ url_for('hello', page = mkcoin.prev_num, type = type) }}"><< Newer items</a>{% else %}<< Newer items{% endif %} | 
-	{% if mkcoin.has_next %}<a href="{{ url_for('hello', page = mkcoin.next_num, type = type) }}">Older items >></a>{% else %}Older items >>{% endif %}
+		{% if mkcoin.has_prev %}<a href="{{ url_for('hello', page = mkcoin.prev_num, type = type) }}"><< Newer items</a>{% else %}<< Newer items{% endif %} | 
+		{% if mkcoin.has_next %}<a href="{{ url_for('hello', page = mkcoin.next_num, type = type) }}">Older items >></a>{% else %}Older items >>{% endif %}
+	{% endif %}
 {% endblock %}
 
 
